src/assets/styles/cmps/GigList.scss
.gig-list {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: em(32px);

    .gig-preview {
        max-height: rem(362px);
        max-width: rem(326px);
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        justify-content: space-between;

        .img-container {
            width: 100%;
            height: 55%;

            .gig-img {
                width: 100%;
                height: 100%;
                object-fit: cover;
                border: 1px solid #e4e5e7;
                border-radius: 8px;
                margin-bottom: rem(7px);
                cursor: pointer;
            }
        }

        &:hover {
            .owner-gig-title {
                text-decoration: underline;
            }
        }

    }



    .owner-details {
        flex-direction: column;

        .owner-details-1 {
            gap: rem(8px);
            margin-bottom: rem(-4px);
        }

        .owner-profile-img {
            border-radius: 50%;
            width: rem(24px);
        }

        .owner-fullname {
            font-size: rem(14px);
            font-weight: 700;
            line-height: rem(21px);
        }
    }

    .owner-gig-title {
        margin-top: rem(23px);
        color: $dark-clr;
        display: -webkit-box;
        line-height: rem(20.8px);
        margin-bottom: rem(8px);
        font-weight: 400;
        min-height: 2em;
        font-size: 1rem;

        &:hover {
            text-decoration: underline;
        }
    }

    .rating-price {
        line-height: rem(13px);
        gap: rem(3px);
        align-items: center;
    }

    .rate-wrapper {
        gap: rem(3px)
    }

    .gig-price {
        font-weight: 700;
        line-height: rem(24px);
        margin-top: rem(8px);
    }

}

